Eliminate 7 errors + 1 warning surfaced by Eclipse null analysis
Class-level @SuppressWarnings("null") on TestLenientFenParser
covered the "Null type safety" category but Eclipse JDT's
"Potential null pointer access" analysis does not always propagate
class-level suppression into method bodies for nullable record
components (here: result.fen() returning @Nullable Fen).

Replace the seven flagged sites with a small fenOf(result) helper
that does an explicit null-check and throws AssertionError with the
problem + message on null. JDT's flow analysis narrows the helper's
return type to @NonNull at the use site, eliminating the warnings
without a blanket suppression. Drops the now-unneeded "null" entry
from the class-level @SuppressWarnings.

TestPgnExportBoardArchival had one related warning at line 159 -
List.of(...) returns List<Tag> which JDT does not treat as
@NonNull List<@NonNull Tag>. Wrap with Nulls.copyOfList for the
project's standard @NonNull-annotated immutable list.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>